Added a way run execute JUnit and TestNG tests in same build